--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -18,7 +18,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "new change",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
